[tool.poetry]
name = "langchain-ask-pdf"
version = "0.1.0"
description = "POC to ask pdfs questions about it's content."
authors = ["Sebastian Maldonado <sebmaldo@gmail.com>"]

[tool.poetry.dependencies]
python = "3.9.5"
langchain = "0.0.154"
PyPDF2 = "3.0.1"
python-dotenv = "1.0.0"
streamlit = "1.18.1"
faiss-cpu = "1.7.4"
altair = "<5"
openai = "0.27.8"
tiktoken = "0.4.0"
watchdog = "3.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
